--- a/docs/main.css
+++ b/docs/main.css
@@ -3,7 +3,7 @@
   --bg-color: #f5f5f5;
   --text-color: #303942;
   --link-color: #1a73e8;
-  --demo-bg-color: #ffffff;
+  --card-bg-color: #ffffff;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -12,7 +12,7 @@
     --bg-color: #202125;
     --text-color: #cccccc;
     --link-color: #8ab4f8;
-    --demo-bg-color: #31333b;
+    --card-bg-color: #31333b;
   }
 }
 
@@ -65,7 +65,7 @@ pre {
 }
 
 .card {
-  background-color: var(--demo-bg-color);
+  background-color: var(--card-bg-color);
   padding: 1rem;
   border-radius: 0.25rem;
   margin-bottom: 1.5rem;
