--- a/docs/main.css
+++ b/docs/main.css
@@ -25,14 +25,24 @@
 }
 
 body {
-  font-family: 'Open Sans', sans-serif;
+  font-family: Arial, Helvetica, sans-serif;
   color: var(--text-color);
   background-color: var(--bg-color);
   padding: 1rem;
 }
 
+input,
+button,
+select,
+optgroup,
+textarea {
+  font-family: inherit;
+  font-size: inherit;
+  line-height: inherit;
+}
+
 h1, h2, h3, h4, p {
-  font-weight: 400;
+  font-weight: normal;
   margin-bottom: 1rem;
 }
 
@@ -61,7 +71,6 @@ pre {
   background-color: #1c1b1b;
   color: #ffffff;
   border-radius: 0.25rem;
-  border: 1px solid #3d3d3d;
 }
 
 .card {
